Wl-683 | Fix course about page hero's text alignment.

--- a/edx-platform/israelxedu.gov.il/lms/static/sass/_overrides.scss
+++ b/edx-platform/israelxedu.gov.il/lms/static/sass/_overrides.scss
@@ -1562,6 +1562,11 @@ header.header-main {
       }
     }
   }
+  .hero.hero-video .grid-container .row .description .data{
+    h1{
+      text-align: right;
+    }
+  }
   .footer-main ul li:last-child{
     text-align: right;
   }
